<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_cat_behavior">
	    <PreferenceScreen 
	        android:title="@string/pref_cat_player">
	      <CheckBoxPreference 
	          android:key="pref_volumekey"
	          android:title="@string/pref_volume_title"
	          android:summary="@string/pref_volume_summary"
	          android:defaultValue="true"/>
	      <CheckBoxPreference 
	          android:key="pref_use_pebble"
	          android:title="@string/pref_pebble_title"
	          android:summary="@string/pref_pebble_summary"
	          android:defaultValue="true"/>
	      <CheckBoxPreference 
	          android:key="pref_show_trackno"
	          android:title="@string/pref_trackno_title"
	          android:summary="@string/pref_trackno_summary"
	          android:defaultValue="true"/>
	      <CheckBoxPreference 
	          android:key="pref_show_lastfm"
	          android:title="@string/pref_lastfm_title"
	          android:summary="@string/pref_lastfm_summary"
	          android:defaultValue="true"/>
	      <CheckBoxPreference 
	          android:key="pref_lower_volume"
	          android:title="@string/pref_lower_volume_title"
	          android:summary="@string/pref_lower_volume_summary"
	          android:defaultValue="true"/>
	      <ListPreference 
	          android:key="pref_call_volume"
	          android:title="@string/pref_call_volume_title"
	          android:summary="@string/pref_call_volume_summary"
	          android:entries="@array/pref_volume_display"
	          android:entryValues="@array/pref_volume_values"
	          android:defaultValue="20"
	          android:dependency="pref_lower_volume"/>
	    </PreferenceScreen>
	    <PreferenceScreen android:title="@string/pref_cat_downloads">
	        <CheckBoxPreference 
	            android:key="pref_dl_wifi_only"
	            android:title="@string/pref_dl_wifi_only_title"
	            android:summary="@string/pref_dl_wifi_only_summary"
	            android:defaultValue="false"/>
	        <Preference 
	            android:key="pref_dl_dir"
	            android:title="@string/pref_dl_dir" />
	        <CheckBoxPreference 
	            android:key="pref_dl_override"
	            android:title="@string/pref_dl_override"
	            android:defaultValue="false"/>
	        <PreferenceCategory android:title="@string/pref_dl_cat_playlist">
		        <CheckBoxPreference 
		             android:key="pref_dl_pl_save_own_dir"
		             android:title="@string/pref_dl_pl_save_own_dir_title"
		             android:summary="@string/pref_dl_pl_save_own_dir_summary"
		             android:defaultValue="false"/>
		        <CheckBoxPreference 
		             android:key="pref_dl_pl_artist_dir"
		             android:title="@string/pref_dl_pl_artist_dir_title"
		             android:summary="@string/pref_dl_pl_artist_dir_summary"
		             android:defaultValue="false"/>
		       </PreferenceCategory>
	    </PreferenceScreen>
	  </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_connection">
	    <CheckBoxPreference
	        android:key="pref_autoconnect"
	        android:title="@string/connectdialog_autoconnect"
	        android:defaultValue="false" />
	    <EditTextPreference 
	        android:key="pref_port"
	        android:title="@string/pref_port_title"
	        android:summary="@string/pref_port_summary"
	        android:dialogTitle="@string/pref_port_title"
	        android:inputType="numberDecimal"
	        android:defaultValue="@string/pref_port_default"/>
    </PreferenceCategory> 
    <PreferenceCategory 
        android:title="@string/pref_cat_info">
        <Preference 
            android:key="pref_version"
            android:summary="@string/pref_version_summary">
        </Preference>
        <Preference
            android:key="pref_clementine_website"
            android:title="@string/pref_clementine_title"
            android:summary="@string/pref_clementine_summary">
        </Preference>
        <Preference
            android:key="pref_key_license"
            android:title="@string/pref_license_title"
            android:summary="@string/pref_license_summary" />
        <Preference 
            android:key="pref_key_about"
            android:title="@string/pref_about_title"
            android:summary="@string/pref_about_summary"/> 
    </PreferenceCategory>  
</PreferenceScreen>