<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/playlist" 
          android:title="@string/menu_playlist"
          android:showAsAction="always"
          android:icon="@drawable/ab_playlist"></item>
    <item android:id="@+id/shuffle" 
          android:title="@string/menu_shuffle"
          android:showAsAction="always"
          android:icon="@drawable/ab_random"></item>
    <item android:id="@+id/repeat" 
          android:title="@string/menu_repeat"
          android:showAsAction="always"
          android:icon="@drawable/ab_replay"></item>
    <item android:id="@+id/love" 
          android:title="@string/menu_love"
          android:showAsAction="ifRoom"></item>
    <item android:id="@+id/ban" 
          android:title="@string/menu_ban"
          android:showAsAction="ifRoom"></item>
    <item android:id="@+id/settings"
          android:title="@string/menu_settings"
          android:showAsAction="ifRoom|withText"
          android:icon="@drawable/ab_settings"></item>
    <item android:id="@+id/disconnect"
          android:title="@string/menu_disconnect"
          android:showAsAction="ifRoom|withText"
          android:icon="@drawable/ab_disconnect">
    </item>
</menu>