<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  style="@style/WhiteBackground"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginBottom="13dp"
  android:layout_marginLeft="13dp"
  android:layout_marginRight="13dp"
  android:layout_marginTop="13dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/donate_header"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/donate_text"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/donate_one"
        style="@style/OrangeButton.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/donate_one" />
    
    <Button
        android:id="@+id/donate_two"
        style="@style/OrangeButton.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/donate_two" />
    
    <Button
        android:id="@+id/donate_five"
        style="@style/OrangeButton.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/donate_five" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/donate_thanks"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</LinearLayout>