<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WhiteBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="13dp"
    android:layout_marginLeft="13dp"
    android:layout_marginRight="13dp"
    android:layout_marginTop="13dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/si_art"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/player_desc_img"
            android:src="@drawable/icon_large" />

        <TextView
            android:id="@+id/si_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/si_art"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/si_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/si_artist"
            android:layout_toLeftOf="@id/si_art"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

    </RelativeLayout>

		<View
		    android:id="@+id/view1"
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginBottom="6dp"
		    android:layout_marginTop="6dp"
		    android:background="#000000" />

		<TableLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
		    
		     <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_album"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_album"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>
        
		    <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_genre"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>

		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >

		        <TextView
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="5dp"
		            android:layout_weight="1"
		            android:singleLine="true"
		            android:text="@string/song_info_year"
		            android:textColor="@android:color/black" />

		        <TextView
		            android:id="@+id/si_year"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="2"
		            android:singleLine="true"
		            android:textColor="@android:color/black" />

		    </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_track"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_track"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_disc"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_disc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_length"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_length"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_playcount"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_playcount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_size"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/song_info_filename"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/si_filename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:singleLine="true"
                android:textColor="@android:color/black" />

        </TableRow>

		</TableLayout>

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="15dp"
		    android:text="@string/song_info_rating"
		    android:textColor="@android:color/black"
		    android:textSize="17sp" />
		
		<RatingBar
		    android:id="@+id/si_rating"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:numStars="5"
		    android:progressDrawable="@drawable/rating_bar" />

</LinearLayout>